# layer_pruning

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  README.md  WMT_SHARED_TASK_NOTES.md  pyproject.toml
.claude/: .nfs536f99bac5684d00000151a4  .nfs8b507addaa4988d80003797f
ablation/: ANALYSIS_REPORT.md  methods.ipynb
ablation/scripts/: attention_comparison.py  cka.py  ft_recovery_curve.py  hidden_state_divergence.py  logit_lens.py  make_figures.py  output_categorization.py  redundancy_analysis.py  surgical_fix.py  surgical_fix_v2.py  weight_diff_analysis.py
ablation/slurm/: analysis.sh  analysis_cs.sh  categorization.sh  ft_recovery.sh  ft_recovery_cs.sh  ft_recovery_m13h.sh  surgical_fix_m13h.sh  surgical_fix_v2_m13h.sh
data/: DATA_CARD.md
data/filtered_en_es/: test.en  test.es
data/kd_en_es/: kd.cs  kd.de
experiments/configs/: B0.yaml  B1.yaml  (+116 more)
paper/: Makefile  main.aux  main.bbl  main.blg  main.tex
scripts/: benchmark_speed.py  cleanup_intermediates.py  create_enes_configs.py  create_missing_enes_configs.py  demo.py  generate_configs.py  inference.py  orchestrator.py  plot_results.py  prep_enes_data.py  push_to_hf.py  quantize_to_gptq.py  recreate_pruned.py  rerun_m_enes.py  run_bnb_eval.py  setup_cluster.sh  smoke_test.py  submit_all.sh  validate_translation.py
src/: cli.py  config.py  run_experiment.py  utils.py
tests/: conftest.py  test_ablation.py  test_attribution.py  test_cli.py  test_config.py  test_data_prep.py  test_distillation.py  test_evaluation.py  test_finetuning.py  test_pruning.py  test_run_experiment.py  test_translate.py  test_utils.py
(+77 files in other folders)
